core/static/css/v2/pages/home/home-page.less
/* ... */
@media (max-width: @screen-xs-max) {
  .navbar-header {
    position: relative;
    .header-title-wrapper {
      display: inline-block;
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      margin: auto;
      height: 32px;
      text-align: center;
    }
  }



  .home-article-grid-3 .grid.share h1 {
    min-height: auto;
  }

  .home-article-grid-1 {
    margin-bottom: 20px;

    .grid {
        margin-bottom: 20px;
    }
  }

  #myCarousel-2 {
    margin-bottom: 20px;

      .carousel-inner {
        .item {
          & > div > div:last-child {
            & > a {
              height: 320px;
              img {
                margin: 0;
              }
            }
          }
        }
      }
  }

  #myCarousel-1 {
    margin-bottom: 20px;
    .item {
      .floating-container {
        position: relative;
        background: #000;
        padding: 20px 0px;
        .relative-container .floating-content {
         .link-to-page {
             padding: 10px;

             a {
               .font-size(18);
             }
         }
         h1, .featured-content-title {
           padding: 0px 0 1px 0;
           font-size: 35px;
         }
        &.item-container {
          margin: 0 auto;
          h1, h4 {
            padding: 15px 0px;
          }
        }
       }
      }

    }

    .floating-carousel-buttons {
      top: ~"calc(100% - 270px)";
      .carousel-buttons-wrapper {
        margin: auto;
      }
    }
  }


  #mainnav .navbar-header .navbar-brand-title {
    display: block;
    margin: 4px;
    color: @dark-grey;
    font-size: 3.3vw;
    line-height: 1.5vw;
  }

  .home-page #mainnav .navbar-header .navbar-brand-sub-title {
    display: block !important;
    font-size: 1.4vw;
  }

  .home-page #mainnav .navbar-header .navbar-brand {
    position: relative;
    float: left;
  }

  #mainnav .navbar-header .navbar-brand img {
    width: 57px;
    left: 0px;
    position: absolute;
    margin-left: 13px;
  }

}

.red-angle-right {
  color: @primary-color !important;
  padding-left: 5px;
  font-weight: 700;
}

.pari-doing-block {
  border-top: 1px solid @border-dark;
  margin-top: 30px;
  padding-top: 40px;
  .pari-do-link {
    padding-bottom: 10px;
  }
  a {
    text-decoration: none;
    color: @dark-grey;
    letter-spacing: 1px;
    font-size: 1.5em;
    &:hover {
      cursor: pointer;
      color: @primary-color;
    }
  }
  .question-heading{
    font-size: 36px;
    color: @primary-color;
    font-family: 'Amiri',serif;
    font-weight: 700;
    margin-bottom: 20px;
  }
  :lang(ml){
    font-weight: 500;
  }
}

.more-section {
  padding-left: 15px;
  padding-bottom: 10px;
}
@media (max-width: @screen-xs-max) {
  body {
    padding-top: 0px !important;

    .resource-title {
      position: absolute;
      top: 0px;
      bottom: 0px;
      left: 0px;
      right: 0px;
    }
    .home-article-grid-1 {
      .infocus-tag {
        display: inline-block;
        margin-bottom: 5px;
      }
      .infocus-title {
        display: inline-block;
        line-height: 22px;
      }
    }
    .resource-description {
      top: 15px;
    }
  }

}

